#63270 - fix sonar